<resources>
    <string name="app_name">CombuGo</string>
    <string name="et_ip">IP Volumetrico</string>
    <string name="et_puerto">Puerto</string>
    <string name="et_bd">Base</string>
    <string name="et_bd_cg">Base CG</string>
    <string name="et_userbd">Usuario</string>
    <string name="et_passbd">Password</string>
    <string name="btn_odbc">ODBC</string>
    <string name="btn_login">Login</string>
    <string name="btn_mac">MAC</string>
    <string name="btn_odbc_actualizar">Actualizar</string>
    <string name="mac_equipo">Mac dispositivo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_err_code">Codigo de Error</string>
    <string name="title_err_method">Metodo</string>
    <string name="title_msg_result">Resultado</string>
    <string name="title_msg_description">Descripcion</string>
    <string name="handlingmsg_warn_receipt_near_end">Rollo de papel casi se termina.\n</string>
    <string name="handlingmsg_warn_battery_near_end">El nivel de bateria de la impresora se esta agotando.\n</string>
    <string name="handlingmsg_err_no_response">Valida la conexion entre dispositivo e impresora.\nConexion se perdio.\n</string>
    <string name="handlingmsg_err_cover_open">Cierra la tapa de la impresora.\n</string>
    <string name="handlingmsg_err_receipt_end">Rollo de papel incorrecto.\n</string>
    <string name="handlingmsg_err_paper_feed">Suelte un interruptor de alimentación de papel.\n</string>
    <string name="handlingmsg_err_autocutter">Retire el papel atascado y cierre la cubierta del rollo de papel.\nRetire el papel atascado o sustancias extrañas en la impresora y, a continuación, apague la impresora y vuelva a encenderla.\n</string>
    <string name="handlingmsg_err_need_recover">Entonces, si la impresora no se recupera del error, por favor, encienda el interruptor de encendido.\n</string>
    <string name="handlingmsg_err_unrecover">Por favor, encienda el interruptor de encendido de la impresora. \ NSi los mismos errores ocurrieron incluso con un ciclo de alimentación, la impresora puede estar fuera de servicio.</string>
    <string name="handlingmsg_err_overheat">Espera a que el led de error de la impresora se apague. \n</string>
    <string name="handlingmsg_err_head">Cabeza termica de la impresora se calento.\n</string>
    <string name="handlingmsg_err_motor">Motor Driver IC de la impresora esta caliente.\n</string>
    <string name="handlingmsg_err_battery">Bateria de la impresora esta caliente.\n</string>
    <string name="handlingmsg_err_wrong_paper">Rollo de papel mal puesto.\n</string>
    <string name="handlingmsg_err_battery_real_end">Conecta la impresora a corriente o cambia la bateria.\nLa bateria de la impresora casi se acaba.\n</string>
    <string name="handlingmsg_err_offline">Impresora fuera de linea.\n</string>
    <string name="btn_restart">Restart</string>
    <string name="title_activity_discovery">DiscoveryActivity</string>
    <string name="title_printerlist">Lista de Impresoras</string>
    <string name="title_target">Target</string>
    <string name="btn_imprimir_ticket">Imprimir Ticket</string>
    <string name="btn_imprimir_cfdi">Obtener servicio</string>
    <string name="tv_nrotrn_label">Folio     :</string>
    <string name="tv_precio_label">Precio     :</string>
    <string name="tv_cantidad_label">Cantidad  :</string>
    <string name="tv_monto_label">Monto     :</string>
    <string name="tv_producto_label">Producto  :</string>
    <string name="et_cliente_busqueda">Busqueda</string>
    <string name="auto_domicilio">Domicilio</string>
    <string name="busqueda_cliente">Buscar cliente por RFC o Nombre</string>
    <string name="razonsocial">Razon Social</string>
    <string name="rfc">R.F.C.</string>
    <string name="mail">Mail</string>
    <string name="et_correo2_cfdi">Correo adicional</string>
    <string name="calle">Calle</string>
    <string name="colonia">Colonia</string>
    <string name="Estado">Estado</string>
    <string name="municipio">Municipio</string>
    <string name="label_domicilio">Domicilios</string>
    <string name="label_cliente">Cliente : </string>
    <string name="label_datosgenerales">Datos CFDi</string>
    <string name="numcuenta">Numero de cuenta</string>
    <string name="title_activitie">CFDi</string>
    <string name="title_generales">Cliente</string>
    <string name="title_ticket">Ticket</string>
    <string name="btnwebservice">Emitir</string>
    <string name="etcomenarios">Comentarios</string>
    <string name="et_despachador">Clave</string>
    <string name="et_facturaweb">NIP Facturacion</string>
    <string name="btn_despachador_registrar">INGRESAR</string>
    <string name="tv_login_despachador">Dispensario</string>
    <string name="btn_sesion_continuar">Regresar</string>
    <string name="numext">Numero Ext.</string>
    <string name="numint">Numero Int.</string>
    <string name="cp">Codigo Postal</string>
    <string name="localidad">Localidad</string>
    <string name="pais">Pais</string>
    <string name="telefono">Telefono</string>
    <string name="comentario">Comentarios</string>
    <string name="nfc">TAG</string>
    <string name="qr">QR</string>
    <string name="rfid">Presente el TAG en el dispositivo.</string>
    <string name="cveest">CVEEST</string>
    <string name="flotillero">RESTRICCION</string>
    <string name="credito">CREDITO</string>
    <string name="producto">PRODUCTO</string>
    <string name="aceite">Aceites</string>
    <string name="txt_start">Start</string>
    <string name="txt_stop">Stop</string>
    <string name="title_porttype">Port Type</string>
    <string name="title_broadcast">Broadcast</string>
    <string name="title_devicemodel">Device Model</string>
    <string name="title_epsonfilter">Epson Filter</string>
    <string name="title_devicetype">Device Type</string>
    <string name="txt_broadcast">255.255.255.255</string>
    <string name="action_settings">Settings</string>
    <string name="odometro">Odometro</string>
    <string name="title_interface">Interface</string>
    <string name="title_address">MAC/BD Address</string>
    <string name="impresora">MAC Impresora</string>
    <string name="area1">Area1</string>
    <string name="area2">Area2</string>
    <string name="prepago">PRE-PAGOS</string>
    <string name="contado">CONTADO</string>
    <string name="bomba">Bomba:</string>
    <string name="vale">Vale</string>
    <string name="anticipo">Anticipos</string>
    <string name="label_rfc">RFC : </string>
    <string name="label_denominacion">Denominación : </string>
    <string name="currentVersionCode">Version Actual : </string>
    <string name="actualVersionCode">Version Disponible : </string>
    <string name="actualizar">Actualización</string>
    <string name="tpv">TPV\'s</string>
    <string name="nip">NIP</string>
    <string name="label_clienteodoo">CLIENTE ODOO</string>
    <string name="label_clientecg">NIP</string>
    <string name="fab_contado">Ticket Contado</string>
    <string name="dialog_close">Combu-Go</string>
    <string name="tv_dialog_close_credito">¿Esta usted seguro de querer regresar al menu principal?</string>
    <string name="tv_dialog_close_credito_salir">Regresar</string>
    <string name="cancelar">Cancelar</string>
    <string name="btn_marca">Marca</string>
    <string name="marca">Bandera</string>
    <string name="bandera">Bandera : </string>
    <string name="url">URL Facturacion :</string>
    <string name="modificar">Modificar</string>
    <string name="cambiarurl">Modificar URL?</string>
    <string name="servicios">SERVICIOS</string>
    <string name="cine">Cinepolis</string>
    <string name="folio">Folio :</string>
    <string name="precio">Precio :</string>
    <string name="boletos">Boletos :</string>
    <string name="finalizar">Finalizar</string>
    <string name="ventaboleto">Vender boleto</string>
    <string name="boletos_cinepolis">Folios Cinepolis</string>
    <string name="total">Total</string>
    <string name="totaldefault">$ 0.00</string>
    <string name="qty">Piezas</string>
    <string name="piezasdefault">0</string>
    <string name="qtydefault">0</string>
    <string name="jarreo">Jarreo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="jarreo_msj">Favor de introducir el nip del gerente de estacion.</string>
    <string name="btn_ok">Aceptar</string>
    <string name="nipWrong">El nip introducido es erroneo, favor de validarlo.</string>
    <string name="nonipmanager">La estacion aun no cuenta con la configuracion para realizar jarreos, falta nip de gerente.</string>
    <string name="qtyvales">Vales</string>
    <string name="metodoPago">Metodo de pago</string>
    <string name="error">Combu-Go Warning!!!</string>
    <string name="nombre">Nombre</string>
    <string name="BrandID">BrandID</string>
    <string name="BrandName">BrandName</string>
    <string name="CfdiURL">CfdiURL</string>
    <string name="brand_activity">Marca</string>
    <string name="BrandImage">BrandImage</string>
    <string name="codcli">Codcli</string>
    <string name="placa">Placa</string>
    <string name="vehiculo">Vehiculo</string>
    <string name="chofer">Chofer</string>
    <string name="EsperaServicio">Servicio aun no esta listo, favor de esperar un momento.</string>
    <string name="Dias">Dias</string>
    <string name="lunes">L</string>
    <string name="martes">M</string>
    <string name="miercoles">M</string>
    <string name="jueves">J</string>
    <string name="viernes">V</string>
    <string name="sabado">S</string>
    <string name="domingo">D</string>
    <string name="Estacion">Estacion</string>
    <string name="Hora">Hora</string>
    <string name="Habilitado">Habilitado</string>
    <string name="Inhabilitado">Inhabilitado</string>
    <string name="HoraCero">00:00-00:00</string>
    <string name="Producto">Producto</string>
    <string name="et_ip_integra">IP Integra</string>
    <string name="scan">Escanear</string>
    <string name="save">Guardar</string>
    <string name="ValeFileID">ValeFileID</string>
    <string name="ValeFile">ValeFile</string>
    <string name="cliente_debito">Clientes debito</string>
    <string name="ValeCodcli">ValeCodcli</string>
    <string name="ValeDencli">ValeDencli</string>
    <string name="ws_vale">Consumir</string>
</resources>
