<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_configuracion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cg.ce.app.chris.com.cgce.MainConfiguracionActivity"
    android:orientation="vertical"
    android:background="@drawable/fondorepsolgris">
    <Button
        android:textColor="@color/colorGreyLight"
        android:id="@+id/btn_marca"
        android:text="@string/btn_marca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_login_rounded"
        android:elevation="4dp"
        android:layout_marginTop="5dp"
        />
    <Button
        android:textColor="@color/colorGreyLight"
        android:id="@+id/btn_odbc"
        android:text="@string/btn_odbc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_login_rounded"
        android:elevation="4dp"
        android:layout_marginTop="30dp"/>
    <Button
        android:textColor="@color/colorGreyLight"
        android:id="@+id/btn_mac"
        android:text="@string/btn_mac"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_login_rounded"
        android:elevation="4dp"
        android:layout_marginTop="30dp" />
    <Button
        android:textColor="@color/colorGreyLight"
        android:id="@+id/btn_razonsocial"
        android:text="@string/razonsocial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_login_rounded"
        android:elevation="4dp"
        android:layout_marginTop="30dp" />
    <Button
        android:textColor="@color/colorGreyLight"
        android:id="@+id/btn_vale"
        android:text="@string/vale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_login_rounded"
        android:elevation="4dp"
        android:layout_marginTop="30dp" />


</LinearLayout>
