<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:orientation="horizontal"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/calle"
        android:id="@+id/calle"
        android:layout_marginLeft="5dp"
        android:textStyle="normal|bold"
        style="@style/repsoldatacliente"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/colonia"
        android:id="@+id/colonia"
        android:layout_marginLeft="5dp"
        android:layout_below="@id/calle"
        style="@style/repsoldatacliente"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Estado"
        android:id="@+id/estado"
        android:layout_marginLeft="5dp"
        android:layout_below="@id/colonia"
        style="@style/repsoldatacliente"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/municipio"
        android:id="@+id/municipio"
        android:layout_marginLeft="5dp"
        android:layout_below="@id/estado"
        style="@style/repsoldatacliente"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="CP"
        android:id="@+id/cp"
        android:layout_below="@+id/colonia"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        style="@style/repsoldatacliente"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#000"
        android:layout_below="@id/municipio"/>

</RelativeLayout>