<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:orientation="horizontal"
    android:padding="10dp">

    <TextView
        android:textStyle="normal|bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/razonsocial"
        android:id="@+id/razonsocial"
        android:layout_marginLeft="5dp"
        style="@style/repsoldatacliente"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/rfc"
        android:id="@+id/rfc"
        android:layout_marginLeft="5dp"
        android:layout_below="@id/razonsocial"
        style="@style/repsoldatacliente"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/mail"
        android:id="@+id/mail"
        android:layout_marginLeft="5dp"
        android:layout_below="@id/rfc"
        style="@style/repsoldatacliente"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#000"
        android:layout_below="@id/mail"/>

</RelativeLayout>