<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".7"/>
    <TextView
        style="@style/CreditoTextView"
        android:textAlignment="center"
        android:textStyle="normal|bold"
        android:textSize="25sp"
        android:id="@+id/tv_cliente"
        android:text="@string/label_cliente"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        style="@style/CreditoTextView"
        android:id="@+id/tv_rfc"
        android:text="@string/label_rfc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_cliente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline"/>
    <TextView
        style="@style/CreditoTextView"
        android:id="@+id/tv_codcli"
        android:text="@string/codcli"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_cliente"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:paddingTop="16dp"
        android:id="@+id/label_vehiculo"
        android:text="@string/vehiculo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_rfc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
   <View
       android:id="@+id/view"
       android:background="@color/RespsolAzul"
       android:layout_width="match_parent"
       android:layout_height="1dp"
       app:layout_constraintTop_toBottomOf="@id/label_vehiculo"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        style="@style/CreditoTextView"
        android:id="@+id/tv_placa"
        android:text="@string/placa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline"/>
    <TextView
        style="@style/CreditoTextView"
        android:id="@+id/tv_vehiculo"
        android:text="@string/vehiculo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/view"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        style="@style/CreditoTextView"
        android:id="@+id/tv_chofer"
        android:text="@string/chofer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_placa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
        android:paddingTop="26dp"
        android:id="@+id/et_odm"
        android:hint="@string/odometro"
        android:singleLine="true"
        android:inputType="number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_chofer"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        android:autofillHints="" />
    <android.support.constraint.ConstraintLayout
        android:id="@+id/clsemana"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_odm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <android.support.constraint.Guideline
            android:id="@+id/gl_semana"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".3"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <TextView
            android:text="@string/Dias"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/gl_semana"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintStart_toEndOf="@id/gl_semana"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:id="@+id/lunes"
                android:textAlignment="center"
                android:textStyle="bold"
                android:checked="false"
                android:background="@drawable/cancel_vector"
                android:text="@string/lunes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/martes"
                android:textAlignment="center"
                android:textStyle="bold"
                android:checked="false"
                android:background="@drawable/cancel_vector"
                android:text="@string/martes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/miercoles"
                android:textAlignment="center"
                android:textStyle="bold"
                android:checked="false"
                android:background="@drawable/cancel_vector"
                android:text="@string/miercoles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/jueves"
                android:textAlignment="center"
                android:textStyle="bold"
                android:checked="false"
                android:background="@drawable/cancel_vector"
                android:text="@string/jueves"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/viernes"
                android:textAlignment="center"
                android:textStyle="bold"
                android:checked="false"
                android:background="@drawable/cancel_vector"
                android:text="@string/viernes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/sabado"
                android:textAlignment="center"
                android:textStyle="bold"
                android:checked="false"
                android:background="@drawable/cancel_vector"
                android:text="@string/sabado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/domingo"
                android:textAlignment="center"
                android:textStyle="bold"
                android:checked="false"
                android:background="@drawable/cancel_vector"
                android:text="@string/domingo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
        android:id="@+id/clestacion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clsemana"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <android.support.constraint.Guideline
            android:id="@+id/gl_estacion"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".3"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <TextView
            android:text="@string/Estacion"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/gl_estacion"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintStart_toEndOf="@id/gl_estacion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:id="@+id/semana"
                android:textAlignment="center"
                android:textStyle="bold"
                android:checked="false"
                android:background="@drawable/cancel_vector"
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
        android:id="@+id/clhora"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clestacion"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <android.support.constraint.Guideline
            android:id="@+id/gl_hora"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".3"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <TextView
            android:text="@string/Hora"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/gl_hora"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintStart_toEndOf="@id/gl_hora"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:id="@+id/tvhora"
                android:background="@drawable/cancel_vector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tvhora1"
                android:textSize="12sp"
                android:layout_marginStart="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tvhora2"
                android:textSize="12sp"
                android:layout_marginStart="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tvhora3"
                android:textSize="12sp"
                android:layout_marginStart="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
    android:id="@+id/clestado"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/clhora"
    android:layout_width="0dp"
    android:layout_height="wrap_content">
    <android.support.constraint.Guideline
        android:id="@+id/gl_estado"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".3"
        android:layout_width="0dp"
        android:layout_height="match_parent"/>
    <TextView
        android:text="@string/Estado"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/gl_estado"/>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintStart_toEndOf="@id/gl_estado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/tvestado1"
            android:background="@drawable/cancel_vector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvestado2"
            android:layout_marginStart="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
        android:id="@+id/clproducto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clestado"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <android.support.constraint.Guideline
            android:id="@+id/gl_producto"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".3"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <TextView
            android:text="@string/Producto"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/gl_producto"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintStart_toEndOf="@id/gl_producto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:id="@+id/tvproducto1"
                android:background="@drawable/ok_vector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tvproducto2"
                android:layout_marginStart="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>